# autodiscover

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml
.gitea/workflows/: demo.yml  release.yml
src/: config.rs  errors.rs  handlers.rs  helpers.rs  main.rs  structs.rs
templates/: autoconfig.xml  autodiscover-json.html  autodiscover-xml.html  email.mobileconfig.xml
