[package]
name = "autodiscover"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.19"
toml = { version = "0.8", default-features = false, features = [ "parse" ] }
actix-web = { version = "4.5", default-features = false, features = [ "macros", "http2" ] }
askama = "0.12"
serde = "1.0"
serde_derive = "1.0"
quick-xml = "0.31"
uuid = { version = "1.8", features = ["v4"] }
