[package]
name = "autodiscover"
version = "1.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.21"
toml = { version = "1.1", default-features = false, features = [ "parse", "serde" ] }
actix-web = { version = "4.13", default-features = false, features = [ "macros", "http2" ] }
askama = { version = "0.16", default-features = false, features = [ "std", "derive" ] }
serde = "1.0"
serde_derive = "1.0"
quick-xml = "0.40"
uuid = { version = "1.23", features = ["v4"] }
